# BelaSCPlugins

./: README.md
Trill/: CMakeLists.txt  TrillIn.cpp  TrillIn.sc
utils/trillin/: CMakeLists.txt  TrillIn.cpp  trillin.cpp
